--- a/VNC.AddinHelper/VNC.AddinHelper.csproj
+++ b/VNC.AddinHelper/VNC.AddinHelper.csproj
@@ -11,11 +11,12 @@
       <AssemblyOriginatorKeyFile>VNC.snk</AssemblyOriginatorKeyFile>-->
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageVersion>2.0.0</PackageVersion>
-        <!--<PackageLicenseFile>LICENSE</PackageLicenseFile>-->
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageProjectUrl>https://github.com/chrhodes/vnc</PackageProjectUrl>
         <RepositoryUrl>https://github.com/chrhodes/vnc</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
-        <PackageTags>mvvm</PackageTags>
+        <PackageTags>vsto;mvvm</PackageTags>
         <!--<PackageIcon>VNC.png</PackageIcon>-->
         <Authors>Christopher Rhodes</Authors>
         <Copyright>Copyright © VNC 2018-2024</Copyright>
@@ -45,12 +46,17 @@
         <Reference Include="System.Web" />
     </ItemGroup>
 
-    <!--<ItemGroup>
-        <None Include="..\..\LICENSE">
+    <ItemGroup>
+        <None Include="..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+    <!--
         <None Include="..\..\VNC.png">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
