Some tweaks to get it to compile on SR71

--- a/SupportTools_Visio/SupportTools_Visio/App.config
+++ b/SupportTools_Visio/SupportTools_Visio/App.config
@@ -1,22 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="loggingConfiguration" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings,       
-				 Microsoft.Practices.EnterpriseLibrary.Logging,       
-				 Version=6.0.0.0, Culture=neutral,       
-				 PublicKeyToken=d702d1a3426498a0" />
-		<section name="dataConfiguration" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings,       
-				 Microsoft.Practices.EnterpriseLibrary.Data,       
-				 Version=6.0.0.0, Culture=neutral,       
-				 PublicKeyToken=31bf3856ad364e35" />
+		<section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings,             Microsoft.Practices.EnterpriseLibrary.Logging,             Version=6.0.0.0, Culture=neutral,             PublicKeyToken=d702d1a3426498a0" />
+		<section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings,             Microsoft.Practices.EnterpriseLibrary.Data,             Version=6.0.0.0, Culture=neutral,             PublicKeyToken=31bf3856ad364e35" />
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" 
-				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection,       
-				 EntityFramework,       
-				 Version=6.0.0.0, Culture=neutral,       
-				 PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection,             EntityFramework,             Version=6.0.0.0, Culture=neutral,             PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 
 		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 			<section name="DXThemeManager" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
@@ -24,9 +12,7 @@
 	</configSections>
 	<connectionStrings>
 		<add name="SupportTools_Visio.Properties.Settings.SmartDiagrammingConnectionString" connectionString="Data Source=parthenon\;Initial Catalog=SmartDiagramming;Integrated Security=True" providerName="System.Data.SqlClient" />
-		<add name="Explore_DB" 
-			 connectionString="Data Source=.\SQL2019;             Initial Catalog=SupportTools_Visio;             Integrated Security=True" 
-			 providerName="System.Data.SqlClient" />
+		<add name="Explore_DB" connectionString="Data Source=.\SQL2019;             Initial Catalog=SupportTools_Visio;             Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<!-- Current Date - Testing Only.  Use this with caution and not in Production ! -->
@@ -63,80 +49,18 @@
 		<add key="Email CC" value="" />
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
-	<loggingConfiguration name="SupportTools_Visio" 
-						  tracingEnabled="true" 
-						  defaultCategory="General" 
-						  logWarningsWhenNoCategoriesMatch="true">
+	<loggingConfiguration name="SupportTools_Visio" tracingEnabled="true" defaultCategory="General" logWarningsWhenNoCategoriesMatch="true">
 		<listeners>
-			<add name="FlatFile TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" 
-				 header="" footer="" 
-				 traceOutputOptions="None" 
-				 formatter="FlatFile Formatter" />
-			<add name="Rolling FlatFile TraceListener" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,                        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,          
-				 Version=6.0.0.0, Culture=neutral,          
-				 PublicKeyToken=d702d1a3426498a0" 
-				 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData,                     
-				 Microsoft.Practices.EnterpriseLibrary.Logging,       
-				 Version=6.0.0.0, Culture=neutral,       
-				 PublicKeyToken=d702d1a3426498a0" 
-				 fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" 
-				 header="" footer="" 
-				 rollInterval="Day" 
-				 maxArchivedFiles="7" 
-				 formatter="FlatFile Formatter" />
-			<add name="Formatted EventLog TraceListener" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,         Version=6.0.0.0, Culture=neutral,        PublicKeyToken=d702d1a3426498a0" source="Enterprise Library Logging" log="Application" machineName="" traceOutputOptions="None" formatter="Text Formatter" />
-			<add name="SignalRListener" 
-				 type="VNC.Logging.TraceListeners.SignalRListener,        
-				 VNC.Logging.TraceListeners.SignalRListener,        
-				 Version=1.0.0.0, Culture=neutral,        
-				 PublicKeyToken=6621de8a79b51ca3" 
-				 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-		formatter="LiveView Formatter" />
+			<add name="FlatFile TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" header="" footer="" traceOutputOptions="None" formatter="FlatFile Formatter" />
+			<add name="Rolling FlatFile TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,                              Microsoft.Practices.EnterpriseLibrary.Logging,                Version=6.0.0.0, Culture=neutral,                PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData,                           Microsoft.Practices.EnterpriseLibrary.Logging,             Version=6.0.0.0, Culture=neutral,             PublicKeyToken=d702d1a3426498a0" fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" header="" footer="" rollInterval="Day" maxArchivedFiles="7" formatter="FlatFile Formatter" />
+			<add name="Formatted EventLog TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,         Version=6.0.0.0, Culture=neutral,        PublicKeyToken=d702d1a3426498a0" source="Enterprise Library Logging" log="Application" machineName="" traceOutputOptions="None" formatter="Text Formatter" />
+			<add name="SignalRListener" type="VNC.Logging.TraceListeners.SignalRListener,              VNC.Logging.TraceListeners.SignalRListener,              Version=1.0.0.0, Culture=neutral,              PublicKeyToken=6621de8a79b51ca3" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" formatter="LiveView Formatter" />
 		</listeners>
 		<formatters>
-			<add name="ErrorLog Formatter" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 template="Timestamp: {timestamp(local:yyyy/MM/dd HH:mm:ss.fff)} Message:{keyvalue(Class Name)}.{keyvalue(Method Name)} &gt;  {message} Category: {category} Priority: {priority} Severity: {severity} Process: {processName} - {processId} Thread: {threadName} - {win32ThreadId} User:{keyvalue(User Name)} Title:{title} EventId: {eventid} Machine: {machine} Application Domain: {appDomain} Extended Properties: {dictionary({key} - {value} )}" />
-			<add name="FlatFile Formatter" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 template="{timestamp(local:yyyy/MM/dd HH:mm:ss.fff)}|{category}|{priority}|{severity}|{processName}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(User Name)}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}" />
-			<add name="Text Formatter" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,       
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 template="Timestamp: {timestamp(local:yyyy/MM/dd HH:mm:ss.fff)} Message: {message} Category: {category} Priority: {priority} EventId: {eventid} Severity: {severity} Title:{title} Machine: {machine} Application Domain: {appDomain} Process Id: {processId} Process Name: {processName} Win32 Thread Id: {win32ThreadId} Thread Name: {threadName} Extended Properties: {dictionary({key} - {value} )}" />
-			<add name="LiveView Formatter" 
-				 type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,        
-				 Microsoft.Practices.EnterpriseLibrary.Logging,        
-				 Version=6.0.0.0, Culture=neutral,        
-				 PublicKeyToken=d702d1a3426498a0" 
-				 template="{timestamp(local:yyyy/MM/dd HH:mm:ss.fff)}|{category}|{priority}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}" />
+			<add name="ErrorLog Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" template="Timestamp: {timestamp(local:yyyy/MM/dd HH:mm:ss.fff)} Message:{keyvalue(Class Name)}.{keyvalue(Method Name)} &gt;  {message} Category: {category} Priority: {priority} Severity: {severity} Process: {processName} - {processId} Thread: {threadName} - {win32ThreadId} User:{keyvalue(User Name)} Title:{title} EventId: {eventid} Machine: {machine} Application Domain: {appDomain} Extended Properties: {dictionary({key} - {value} )}" />
+			<add name="FlatFile Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" template="{timestamp(local:yyyy/MM/dd HH:mm:ss.fff)}|{category}|{priority}|{severity}|{processName}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(User Name)}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}" />
+			<add name="Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,             Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" template="Timestamp: {timestamp(local:yyyy/MM/dd HH:mm:ss.fff)} Message: {message} Category: {category} Priority: {priority} EventId: {eventid} Severity: {severity} Title:{title} Machine: {machine} Application Domain: {appDomain} Process Id: {processId} Process Name: {processName} Win32 Thread Id: {win32ThreadId} Thread Name: {threadName} Extended Properties: {dictionary({key} - {value} )}" />
+			<add name="LiveView Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" template="{timestamp(local:yyyy/MM/dd HH:mm:ss.fff)}|{category}|{priority}|{processId}|{threadName}|{win32ThreadId}|{keyvalue(Class Name)}.{keyvalue(Method Name)}|{keyvalue(Duration)}|{message}" />
 		</formatters>
 		<logFilters>
 			<!-- Use this filter to exclude logging that does not include a duration or takes less than maxDuration milli-seconds -->
@@ -376,7 +300,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -404,7 +328,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.AspNet.SignalR.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.4.2.0" newVersion="2.4.2.0" />
+				<bindingRedirect oldVersion="0.0.0.0-2.4.3.0" newVersion="2.4.3.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -457,6 +381,14 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.CodeAnalysis.Workspaces.MSBuild" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="VNC.Core" publicKeyToken="6621de8a79b51ca3" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-2.1.4.0" newVersion="2.1.4.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="VNC.Logging" publicKeyToken="6621de8a79b51ca3" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
