--- a/SupportTools_Visio/SupportTools_Visio/packages.config
+++ b/SupportTools_Visio/SupportTools_Visio/packages.config
@@ -4,39 +4,40 @@
   <package id="CalcBinding" version="2.5.2" targetFramework="net48" />
   <package id="CommonServiceLocator" version="2.0.7" targetFramework="net48" />
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net48" />
-  <package id="DevExpress.CodeParser" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Data" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Data.Desktop" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.DataAccess" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Images" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Mvvm" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Office.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Pdf.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Pdf.Drawing" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Printing.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.RichEdit.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.RichEdit.Export" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Core.Extensions" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Docking" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.DocumentViewer.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.ExpressionEditor" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Grid" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Grid.Core" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Grid.Printing" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.LayoutControl" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Office" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Printing" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Ribbon" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.RichEdit" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Wpf.Themes.Office2019Colorful" version="21.2.7" targetFramework="net48" />
-  <package id="DevExpress.Xpo" version="21.2.7" targetFramework="net48" />
+  <package id="DevExpress.CodeParser" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Data" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Data.Desktop" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.DataAccess" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Drawing" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Images" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Mvvm" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Office.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Pdf.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Pdf.Drawing" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Printing.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.RichEdit.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.RichEdit.Export" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Core.Extensions" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Docking" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.DocumentViewer.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.ExpressionEditor" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Grid" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Grid.Core" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Grid.Printing" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.LayoutControl" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Office" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Printing" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Ribbon" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.RichEdit" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Themes.Office2019Colorful" version="22.1.3" targetFramework="net48" />
+  <package id="DevExpress.Xpo" version="22.1.3" targetFramework="net48" />
   <package id="DynamicExpresso.Core" version="2.13.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net471" />
   <package id="EnterpriseLibrary.Common.NetCore" version="6.3.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net471" />
   <package id="EnterpriseLibrary.Logging.NetCore" version="6.3.2" targetFramework="net48" />
-  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net471" />
   <package id="Humanizer.Core" version="2.14.1" targetFramework="net48" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net471" />
@@ -222,9 +223,9 @@
   <package id="VNC.AssemblyHelper" version="2.0.0" targetFramework="net48" />
   <package id="VNC.AZDO" version="2.0.0" targetFramework="net48" />
   <package id="VNC.CodeAnalysis" version="2.0.0" targetFramework="net48" />
-  <package id="VNC.Core" version="2.1.4" targetFramework="net48" />
+  <package id="VNC.Core" version="2.1.6" targetFramework="net48" />
   <package id="VNC.Logging" version="2.1.0" targetFramework="net48" />
   <package id="VNC.Logging.TraceListeners.SignalRListener" version="1.0.0" targetFramework="net48" />
-  <package id="VNC.WPF.Presentation" version="2.0.0" targetFramework="net48" />
-  <package id="VNC.WPF.Presentation.Dx" version="2.0.0" targetFramework="net48" />
+  <package id="VNC.WPF.Presentation" version="2.1.1" targetFramework="net48" />
+  <package id="VNC.WPF.Presentation.Dx" version="2.1.1" targetFramework="net48" />
 </packages>
