--- a/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
+++ b/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
@@ -10,7 +10,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Release-1</VersionSuffix>
-        <FileVersion>20224.06.07AA</FileVersion>
+        <FileVersion>2024.06.07A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
