--- a/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
+++ b/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
@@ -10,7 +10,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Release-1</VersionSuffix>
-        <FileVersion>20224.06.07AA</FileVersion>
+        <FileVersion>2024.06.19A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -48,7 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="VNC.Core" Version="2.1.4" />
+      <PackageReference Include="VNC.Core" Version="2.1.6" />
     </ItemGroup>
 
     <ItemGroup>
