--- a/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
+++ b/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net48</TargetFrameworks>
+        <TargetFrameworks>net481</TargetFrameworks>
+        <ImplicitUsings>disable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -9,8 +10,8 @@
         <RootNamespace>VNC.VSTOAddIn</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
-        <VersionSuffix>Release-1</VersionSuffix>
-        <FileVersion>2024.06.07A</FileVersion>
+        <VersionSuffix>Release</VersionSuffix>
+        <FileVersion>2024.06.22A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -22,6 +23,7 @@
         <Copyright>Copyright © VNC 2024</Copyright>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Description>VNC VSTO AddIn Helper</Description>
+        <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup>
@@ -33,7 +35,7 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-        <None Include="..\VNC.png">
+        <None Include="VNC.png">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
