Everything works after housecleaning.  Getting started on extendind VisioAddin Added ExcelAddInApplication and VisioAddInAplication projects.  Moved Events to Application projects.

--- a/VNC.Visio.Addin/VNC.Visio.Addin.csproj
+++ b/VNC.Visio.Addin/VNC.Visio.Addin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net48</TargetFrameworks>
+        <TargetFrameworks>net481</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -41,7 +41,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\VNC.VSTOAddins\VNC.VSTOAddIn.csproj" />
+      <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />
     </ItemGroup>
 
 </Project>
